removed the separate pages, now the website is a one page format

--- a/404.html
+++ b/404.html
@@ -42,12 +42,11 @@
             <div class="logo"><a href="https://brodynewell.com/">Brody <span>Newell</span></a></div>
             <ul class="menu">
                 <li><a href="https://brodynewell.com/" class="menu-btn">Home</a></li>
-                <li><a href="https://brodynewell.com/about" class="menu-btn">About</a></li>
-                <li><a href="https://brodynewell.com/resources" class="menu-btn">Resouces</a></li>
-                <li><a href="https://brodynewell.com/projects" class="menu-btn">Projects</a></li>
-                <li><a href="https://brodynewell.com/games" class="menu-btn">Games</a></li>
-                <li><a href="https://brodynewell.com/chat" class="menu-btn">Chat</a></li>
-                <li><a href="https://brodynewell.com/contact" class="menu-btn">Contact</a></li>
+                <li><a href="https://brodynewell.com/#about" class="menu-btn">About</a></li>
+                <li><a href="https://brodynewell.com/#resources" class="menu-btn">Resouces</a></li>
+                <li><a href="https://brodynewell.com/#projects" class="menu-btn">Projects</a></li>
+                <li><a href="https://brodynewell.com/#games" class="menu-btn">Games</a></li>
+                <li><a href="https://brodynewell.com/#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
