--- a/projects.html
+++ b/projects.html
@@ -59,13 +59,72 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-2">Projects | Coming Soon...</div>
+                <div class="text-2">Projects</div>
                 <a href="https://brodynewell.com/">Home</a>
             </div>
         </div>
     </section>
 
-    <!-- Pages --
+    <!-- Projects -->
+    <section class="cardcarousel" id="cardcarousel">
+        <div class="max-width">
+            <h2 class="title">Projects | Pages</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <a href="https://brodynewell.com/draw" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Drawing Tool</div>
+                        <p>A functional drawing tool for you to scribble and write text on. Right click to save and store your masterpiece while also being able to share it with others.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/dictionary" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Dictionary</div>
+                        <p>An actual dictionary that gives a voice prononciation and makes it easy to copy and paste the definitions. Contains elaborate, but simplified definitions for you to use.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/calculator" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Calculator</div>
+                        <p>A scientific calculator to help you with math. Click the screen to copy the answer.</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cardcarousel" id="cardcarousel">
+        <div class="max-width">
+            <h2 class="title">Projects | Games</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <a href="https://brodynewell.com/games/tether/play" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Tether</div>
+                        <p>A game about swinging a ball around and sheer destruction. There are achievements along with daily login streaks. You control a tether with your mouse but watch out for the other balls, as they can end your fun.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/games/golf/play" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Golf</div>
+                        <p>Minigolf, but on your computer. Play locally with up to 10 people. Minigolf has never been more fun with more courses and levels being added all the time.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodyn8.itch.io/space-defense" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Space Defence</div>
+                        <p>A PC game that was originally a side project. I don't work on it much anymore as I am working on another game. Made with Unity. If it asks for a password, use "<strong>download</strong>"</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Pages -->
     <section class="pages" id="pages">
         <div class="max-width">
             <h2 class="title">More on the Site</h2>
@@ -108,7 +167,7 @@
                 </a>
             </div>
         </div>
-    </section> >
+    </section>
 
     <!-- Footer -->
     <footer>
