--- a/resources.html
+++ b/resources.html
@@ -59,56 +59,71 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-2">Resources | Coming Soon...</div>
+                <div class="text-2">Resources</div>
                 <a href="https://brodynewell.com/">Home</a>
             </div>
         </div>
     </section>
 
-    <!-- Pages --
-    <section class="pages" id="pages">
+    <!-- Projects -->
+    <section class="cardcarousel" id="cardcarousel">
         <div class="max-width">
-            <h2 class="title">More on the Site</h2>
-            <div class="pages-content">
-              <a href="https://brodynewell.com/about" class="card">
-                    <div class="box">
-                        <i class="fas fa-portrait"></i>
-                        <div class="text">About</div>
-                    </div>
-                </a>
-                <a href="https://brodynewell.com/resources" class="card">
-                    <div class="box">
-                        <i class="fas fa-file"></i>
-                        <div class="text">Resources</div>
-                    </div>
-                </a>
-                <a href="https://brodynewell.com/projects" class="card">
-                    <div class="box">
-                        <i class="fas fa-project-diagram"></i>
-                        <div class="text">Projects</div>
-                    </div>
-                </a>
-                <a href="https://brodynewell.com/games" class="card">
-                    <div class="box">
-                        <i class="fas fa-gamepad"></i>
-                        <div class="text">Games</div>
-                    </div>
-                </a>
-                <a href="https://brodynewell.com/contact" class="card">
-                    <div class="box">
-                        <i class="fas fa-headset"></i>
-                        <div class="text">Contact</div>
-                    </div>
-                </a>
-                <a href="https://github.com/brodyn8/Personal-Website/" class="card">
-                    <div class="box">
-                        <i class="fas fa-map"></i>
-                        <div class="text">Changes</div>
-                    </div>
-                </a>
+            <h2 class="title">Resources | Pages</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <a href="https://brodynewell.com/draw" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Drawing Tool</div>
+                        <p>A functional drawing tool for you to scribble and write text on. Right click to save and store your masterpiece while also being able to share it with others.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/dictionary" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Dictionary</div>
+                        <p>An actual dictionary that gives a voice prononciation and makes it easy to copy and paste the definitions. Contains elaborate, but simplified definitions for you to use.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/calculator" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Calculator</div>
+                        <p>A scientific calculator to help you with math. Click the screen to copy the answer.</p>
+                    </a>
+                </div>
             </div>
         </div>
-    </section> >
+    </section>
+
+    <section class="cardcarousel" id="cardcarousel">
+        <div class="max-width">
+            <h2 class="title">Resources | English</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <a href="https://brodynewell.com/games/tether/play" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">A</div>
+                        <p>A</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cardcarousel" id="cardcarousel">
+        <div class="max-width">
+            <h2 class="title">Resources | Spanish</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <a href="#" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">A</div>
+                        <p>A</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
