--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
             <div class="logo"><a href="https://brodynewell.com/">Brody <span>Newell</span></a></div>
             <ul class="menu">
                 <li><a href="https://brodynewell.com/" class="menu-btn">Home</a></li>
-                <li><a href="https://brodynewell.com/about" class="menu-btn">About</a></li>
-                <li><a href="https://brodynewell.com/resources" class="menu-btn">Resouces</a></li>
-                <li><a href="https://brodynewell.com/projects" class="menu-btn">Projects</a></li>
-                <li><a href="https://brodynewell.com/games" class="menu-btn">Games</a></li>
-                <li><a href="https://brodynewell.com/chat" class="menu-btn">Chat</a></li>
-                <li><a href="https://brodynewell.com/contact" class="menu-btn">Contact</a></li>
+                <li><a href="https://brodynewell.com/#about" class="menu-btn">About</a></li>
+                <li><a href="https://brodynewell.com/#resources" class="menu-btn">Resouces</a></li>
+                <li><a href="https://brodynewell.com/#projects" class="menu-btn">Projects</a></li>
+                <li><a href="https://brodynewell.com/#games" class="menu-btn">Games</a></li>
+                <li><a href="https://brodynewell.com/#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -63,36 +62,6 @@
                 <div class="text-2">Brody Newell</div>
                 <div class="text-3"><span class="typing-about"></span></div>
                 <a href="https://brodynewell.com/about">About Me</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Games -->
-    <section class="games" id="games">
-        <div class="max-width">
-            <h2 class="title">Games</h2>
-            <div class="carousel owl-carousel">
-              <div class="card">
-                    <div class="box">
-                        <img src="assets/img/background.jpg" alt="">
-                        <div class="text">Game 1</div>
-                        <p>Description 1</p>
-                    </div>
-              </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="assets/img/background.jpg" alt="">
-                        <div class="text">Game 2</div>
-                        <p>Description 2</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="assets/img/background.jpg" alt="">
-                        <div class="text">Game 3</div>
-                        <p>Description 3</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -119,44 +88,172 @@
     <!-- Pages -->
     <section class="pages" id="pages">
         <div class="max-width">
-            <h2 class="title">More on the Site</h2>
+            <h2 class="title">On the Site</h2>
             <div class="pages-content">
-              <a href="https://brodynewell.com/about" class="card">
+              <a href="#about" class="card">
                     <div class="box">
                         <i class="fas fa-portrait"></i>
                         <div class="text">About</div>
                     </div>
                 </a>
-                <a href="https://brodynewell.com/resources" class="card">
+                <a href="#resources" class="card">
                     <div class="box">
                         <i class="fas fa-file"></i>
                         <div class="text">Resources</div>
                     </div>
                 </a>
-                <a href="https://brodynewell.com/projects" class="card">
+                <a href="#projects" class="card">
                     <div class="box">
                         <i class="fas fa-project-diagram"></i>
                         <div class="text">Projects</div>
                     </div>
                 </a>
-                <a href="https://brodynewell.com/games" class="card">
+                <a href="#games" class="card">
                     <div class="box">
                         <i class="fas fa-gamepad"></i>
                         <div class="text">Games</div>
                     </div>
                 </a>
-                <a href="https://brodynewell.com/contact" class="card">
+                <a href="#contact" class="card">
                     <div class="box">
                         <i class="fas fa-headset"></i>
                         <div class="text">Contact</div>
                     </div>
                 </a>
-                <a href="https://github.com/brodyn8/Personal-Website/" class="card">
+                <a href="https://github.com/brodyn8/Personal-Website/" class="card" target="_blank">
                     <div class="box">
                         <i class="fas fa-map"></i>
                         <div class="text">Changes</div>
                     </div>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- About -->
+    <section class="about" id="about">
+        <div class="max-width">
+          <h2 class="title"></h2>
+            <div class="about-content">
+              <div class="column left">
+                    <img src="assets/img/portrait.jpg" alt="Freshman Portrait">
+                </div>
+                <div class="column right">
+                    <div class="text"><strong>Who am I?</strong></div> <div class="blue-text"><span class="typing-about"></span></div>
+                    <p><br><br>I love sports and hands-on classes. Usually, I tend to excell in my classes and help others during their problems.<br><br>I have picked up quite a few skills during self teaching myself and aim to improve these skills everyday. One of the most frequently practiced is for sure football, but in my freetime, I love to build things or explore subjects that I find facinating. I got into coding about four years ago and ever since then, I have improved this website, (I could not have done it without google and the help of other developers though with their amazing feedback).<br><br>More information about me is listed below<br><br><span class="fas fa-chevron-right"></span><strong> Full Name: </strong> Brody T. Newell<br><br><span class="fas fa-chevron-right"></span><strong> Date of Birth: </strong>September 10th, 2006<br><br><span class="fas fa-chevron-right"></span><strong> Email: </strong>brodynewell8@gmail.com<br><br><span class="fas fa-chevron-right"></span><strong> Languages Known: </strong>English, (Learning Spanish)<br><br><br></p>
+                    <h3>Sports</h3>
+                    <p><br><span class="fas fa-chevron-right"></span><strong> Number: </strong>#78<br><br><span class="fas fa-chevron-right"></span><strong> Main Position: </strong>Longsnapper<br><br><span class="fas fa-chevron-right"></span><strong> Height: </strong>5'6"<br><br><span class="fas fa-chevron-right"></span><strong> Weight: </strong>138.6 lbs.</p>
+                    <a href="#projects">Projects</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects -->
+    <section class="cardcarousel" id="projects">
+        <div class="max-width">
+            <h2 class="title">Projects | Pages</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <a href="https://brodynewell.com/draw" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Drawing Tool</div>
+                        <p>A functional drawing tool for you to scribble and write text on. Right click to save and store your masterpiece while also being able to share it with others.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/dictionary" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Dictionary</div>
+                        <p>An actual dictionary that gives a voice prononciation and makes it easy to copy and paste the definitions. Contains elaborate, but simplified definitions for you to use.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/calculator" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Calculator</div>
+                        <p>A scientific calculator to help you with math. Click the screen to copy the answer.</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cardcarousel" id="projects">
+        <div class="max-width">
+            <h2 class="title">Projects | Games</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <a href="https://brodynewell.com/games/tether/play" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Tether</div>
+                        <p>A game about swinging a ball around and sheer destruction. There are achievements along with daily login streaks. You control a tether with your mouse but watch out for the other balls, as they can end your fun.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodynewell.com/games/golf/play" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Golf</div>
+                        <p>Minigolf, but on your computer. Play locally with up to 10 people. Minigolf has never been more fun with more courses and levels being added all the time.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://brodyn8.itch.io/space-defense" class="box">
+                        <img src="assets/img/background.jpg" alt="">
+                        <div class="text">Space Defence</div>
+                        <p>A PC game that was originally a side project. I don't work on it much anymore as I am working on another game. Made with Unity. If it asks for a password, use "<strong>download</strong>"</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact Me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in Touch</div>
+                    <p>For suggestions or general questions, contact me.</p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Brody Newell</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">brodynewell8@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">Message Me</div>
+                    <form name="contact" netlify>
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <input type="text" placeholder="Subject" required>
+                        </div>
+                        <div class="field textarea">
+                            <textarea cols="30" rows="10" placeholder="Message..." required></textarea>
+                        </div>
+                        <div class="button">
+                            <button type="submit">Send Message</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
