--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message Me</div>
-                    <form name="contact" netlify>
+                    <form name="contact" method="POST" data-netlify="true">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
