edited some of the game's pictures

--- a/index.html
+++ b/index.html
@@ -306,21 +306,21 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <a href="https://brodynewell.com/games/tether/play" class="box" target="_blank">
-                        <img src="assets/img/background.jpg" alt="">
+                        <img src="assets/img/games/tether.png" alt="">
                         <div class="text">Tether</div>
                         <p>A game about swinging a ball around and sheer destruction. There are achievements along with daily login streaks. You control a tether with your mouse but watch out for the other balls, as they can end your fun.</p>
                     </a>
                 </div>
                 <div class="card">
                     <a href="https://brodynewell.com/games/golf/play" class="box" target="_blank">
-                        <img src="assets/img/background.jpg" alt="">
+                        <img src="assets/img/games/golf.png" alt="">
                         <div class="text">Golf</div>
                         <p>Minigolf, but on your computer. Play locally with up to 10 people. Minigolf has never been more fun with more courses and levels being added all the time.</p>
                     </a>
                 </div>
                 <div class="card">
                     <a href="https://brodyn8.itch.io/space-defense" class="box" target="_blank">
-                        <img src="assets/img/background.jpg" alt="">
+                        <img src="assets/img/games/space-defense.png" alt="">
                         <div class="text">Space Defence</div>
                         <p>A PC game that was originally a side project. I don't work on it much anymore as I am working on another game. Made with Unity. If it asks for a password, use "<strong>download</strong>"</p>
                     </a>
