changed a couple of typos and page titles

--- a/dictionary.html
+++ b/dictionary.html
@@ -17,7 +17,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 	<!-- Title -->
-	<title>Dictionary | Brody Newell</title>
+	<title>Dictionary</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBT4MB7N3F">
 	</script>
