--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="information-content">
                 <div class="column left">
                 </div>
-                  <p>Why the new look? Well if you read the message on the last website's homepage, I changed the look because I felt that the last one was a little over the top in look and was a bit janky. This simplified and modern beautiful look with animations allows much more growing potential for the site and other features moving forward.<br><i>If you would like to assist in the development process, you can kindly donate to me by the button down below. No need to worry though, just by being on this site allows me to morally continue forward with the development process, knowing people still come to this site and use it as a resource or place to hang out.</i> Stay tuned for more to come!<br><br></p>
+                  <p>Why the new look? Well if you read the message on the last website's homepage, I changed the look because I felt that the last one was a little over the top in look and was a bit janky. This simplified and modern beautiful look with animations allows much more growing potential for the site and other features moving forward.<br><i>If you would like to assist in the development process, you can kindly donate to me by the button down below. No need to worry though, just by being on this site allows me to morally continue forward with the development process, knowing people still come to this site and use it as a resource or place to hang out is really all I need.</i> Stay tuned for more to come!<br><br></p>
                     <div class="column right">
                     <div class="text"><strong>What pages are here?</strong></div> <div class="blue-text"><span class="typing-pages"></span></div>
                     <p><br><br>I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about page. If not, then check it out anyways because I'm pretty cool.<br><br>If you want to find out what changes I have made recently, view the changes link that you can find down below in pages.</p>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="column right">
                     <div class="text"><strong>Who am I?</strong></div> <div class="blue-text"><span class="typing-about"></span></div>
-                    <p><br><br>I love sports and hands-on classes. Usually, I tend to excell in my classes and help others during their problems.<br><br>I have picked up quite a few skills during self teaching myself and aim to improve these skills everyday. One of the most frequently practiced is for sure football, but in my freetime, I love to build things or explore subjects that I find facinating. I got into coding about four years ago and ever since then, I have improved this website, (I could not have done it without google and the help of other developers though with their amazing feedback).<br><br>More information about me is listed below<br><br><span class="fas fa-chevron-right"></span><strong> Full Name: </strong> Brody T. Newell<br><br><span class="fas fa-chevron-right"></span><strong> Date of Birth: </strong>September 10th, 2006<br><br><span class="fas fa-chevron-right"></span><strong> Email: </strong>brodynewell8@gmail.com<br><br><span class="fas fa-chevron-right"></span><strong> Languages Known: </strong>English, (Learning Spanish)<br><br><br></p>
+                    <p><br><br>I love sports and hands-on classes. Usually, I tend to excell in my classes and help others during their problems.<br><br>I have picked up quite a few skills during self teaching myself and aim to improve these skills everyday. One of the most frequently practiced is for sure football, but in my freetime I love to build things or explore subjects that I find facinating. I got into coding about four years ago and ever since then, I have improved this website. (I could not have done it without google and the help of other developers with their feedback).<br><br>More information about me is listed below<br><br><span class="fas fa-chevron-right"></span><strong> Full Name: </strong> Brody T. Newell<br><br><span class="fas fa-chevron-right"></span><strong> Date of Birth: </strong>September 10th, 2006<br><br><span class="fas fa-chevron-right"></span><strong> Email: </strong>brodynewell8@gmail.com<br><br><span class="fas fa-chevron-right"></span><strong> Languages Known: </strong>English, (Learning Spanish)<br><br><br></p>
                     <h3>Sports</h3>
                     <p><br><span class="fas fa-chevron-right"></span><strong> Number: </strong>#78<br><br><span class="fas fa-chevron-right"></span><strong> Main Position: </strong>Longsnapper<br><br><span class="fas fa-chevron-right"></span><strong> Height: </strong>5'6"<br><br><span class="fas fa-chevron-right"></span><strong> Weight: </strong>138.6 lbs.</p>
                     <a href="#projects">Projects</a>
@@ -465,19 +465,19 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>For suggestions or general questions, contact me.<br><i>This form might not work on my end, it will go through though but information will not be posted. If you want to contact me, email me separately for now</i></p>
+                    <p>For suggestions or general questions, contact me.<br><br><i>This form might not work on my end, it will go through but information will not be posted. If you want to contact me, email me separately for now.</i></p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
-                                <div class="head">Name</div>
+                                <div class="head">Name:</div>
                                 <div class="sub-title">Brody Newell</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
-                                <div class="head">Email</div>
+                                <div class="head">Email:</div>
                                 <div class="sub-title">brodynewell8@gmail.com</div>
                             </div>
                         </div>
