--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Brody Newell</title>
+    <title>Error 404</title>
 
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"/>
     
