--- a/draw.html
+++ b/draw.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Draw | Brody Newell</title>
+    <title>Draw</title>
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBT4MB7N3F">
