changed a few links for the games

--- a/index.html
+++ b/index.html
@@ -161,21 +161,21 @@
             <h2 class="title">Helpful Pages</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
-                    <a href="https://brodynewell.com/draw" class="box">
+                    <a href="https://brodynewell.com/draw" class="box" target="_blank">
                         <img src="assets/img/pages/draw.png" alt="">
                         <div class="text">Drawing Tool</div>
                         <p>A functional drawing tool for you to scribble and write text on. Right click to save and store your masterpiece while also being able to share it with others.</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="https://brodynewell.com/dictionary" class="box">
+                    <a href="https://brodynewell.com/dictionary" class="box" target="_blank">
                         <img src="assets/img/pages/dictionary.png" alt="">
                         <div class="text">Dictionary</div>
                         <p>An actual dictionary that gives a voice prononciation and makes it easy to copy and paste the definitions. Contains elaborate, but simplified definitions for you to use.</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="https://brodynewell.com/calculator" class="box">
+                    <a href="https://brodynewell.com/calculator" class="box" target="_blank">
                         <img src="assets/img/pages/calculator.png" alt="">
                         <div class="text">Calculator</div>
                         <p>A scientific calculator to help you with math. Click the screen to copy the answer.</p>
