--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                     <div class="text"><strong>What pages are here?</strong></div> <div class="blue-text"><span class="typing-pages"></span></div>
                     <p><br><br>I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about page. If not, then check it out anyways because I'm pretty cool.<br><br>If you want to find out what changes I have made recently, view the changes link that you can find down below in pages.</p>
                     <a href="https://paypal.me/brodyn8?locale.x=en_US" target="_blank">Donate</a>
-                    <a href="https://github.com/brodyn8/Personal-Website/" target="_blank">Changes</a>
+                    <a href="https://github.com/brodyn8/Portfolio" target="_blank">Changes</a>
                     <a href="#pages">Pages</a>
-                </div>
+                    </div>
             </div>
         </div>
     </section>
@@ -126,7 +126,7 @@
                         <div class="text">Contact</div>
                     </div>
                 </a>
-                <a href="https://github.com/brodyn8/Personal-Website/" class="card" target="_blank">
+                <a href="https://github.com/brodyn8/Portfolio" class="card" target="_blank">
                     <div class="box">
                         <i class="fas fa-map"></i>
                         <div class="text">Changes</div>
