changed the typer title to match the game

--- a/games/tether/play.html
+++ b/games/tether/play.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en-US"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/><meta name="google-site-verification" content="zFyWibfayZE1X43vy881NOKyizS07fj7S-cM2M1SmlY"/><meta name="robots" content="noimageindex"/><link href="sitemap.xml" rel="sitemap" type="application/xml" title="Sitemap"/><title>Tether | Brody Newell</title><link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png" />
+<!DOCTYPE html><html lang="en-US"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/><meta name="google-site-verification" content="zFyWibfayZE1X43vy881NOKyizS07fj7S-cM2M1SmlY"/><meta name="robots" content="noimageindex"/><link href="sitemap.xml" rel="sitemap" type="application/xml" title="Sitemap"/><title>Tether</title><link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBT4MB7N3F">
 	</script>
