changed a few link ids

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </section>
 
     <!------------------------------ Resources ------------------------------>
-    <section class="resources" id="resources">
+    <section class="resources" id="resources-pages">
         <div class="max-width">
             <h2 class="title">Helpful Pages</h2>
             <div class="carousel owl-carousel">
@@ -351,7 +351,7 @@
         </div>
     </section>
 
-        <section class="games" id="games">
+        <section class="games" id="games-recommended">
         <div class="max-width">
             <h2 class="title">Recommended Games</h2>
             <div class="carousel owl-carousel">
