--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message Me</div>
-                    <form name="contact" method="POST" data-netlify="true">
+                    <form name="contact" method='post' netlify>
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
