--- a/index.html
+++ b/index.html
@@ -485,20 +485,20 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message Me</div>
-                    <form name="contact" method='post' netlify>
+                    <form name="contact" method='post' action="#" netlify>
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" name="name" placeholder="Name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" name="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" name="subject" placeholder="Subject" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message..." required></textarea>
+                            <textarea cols="30" rows="10" placeholder="Message..." name="message" required></textarea>
                         </div>
                         <div class="button">
                             <button type="submit">Send Message</button>
