fixed the contact form

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>For suggestions or general questions, contact me.<br><br><i>This form might not work on my end, it will go through but information will not be posted. If you want to contact me, email me separately for now.</i></p>
+                    <p>For suggestions or general questions, contact me.</i></p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
