change the page action after submitting the contact form

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message Me</div>
-                    <form name="contact" action="https://brodynewell.com/#contact" method='POST' netlify>
+                    <form name="contact" method='POST' action="https://brodynewell.com/#contact" netlify>
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" name="name" placeholder="Name" required>
