changed success page

--- a/success.html
+++ b/success.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Error 404</title>
+    <title>Success</title>
 
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"/>
     
@@ -58,8 +58,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Uh Oh,</div>
-                <div class="text-2">404 Page Not Found</div>
+                <div class="text-2">Successfully submitted form</div>
                 <a href="https://brodynewell.com/">Back to Home</a>
             </div>
         </div>
