removed my DOB and added a secondary email

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="column right">
                     <div class="text"><strong>Who am I?</strong></div> <div class="blue-text"><span class="typing-about"></span></div>
-                    <p><br><br>I love sports and hands-on classes. Usually, I tend to excell in my classes and help others during their problems.<br><br>I have picked up quite a few skills during self teaching myself and aim to improve these skills everyday. One of the most frequently practiced is for sure football, but in my freetime I love to build things or explore subjects that I find facinating. I got into coding about four years ago and ever since then, I have improved this website. (I could not have done it without google and the help of other developers with their feedback).<br><br>More information about me is listed below<br><br><span class="fas fa-chevron-right"></span><strong> Full Name: </strong> Brody Newell<br><br><span class="fas fa-chevron-right"></span><strong> Date of Birth: </strong>September 10th, 2006<br><br><span class="fas fa-chevron-right"></span><strong> Email: </strong>brodynewell8@gmail.com<br><br><span class="fas fa-chevron-right"></span><strong> Languages Known: </strong>English, (Learning Spanish)<br><br><br></p>
+                    <p><br><br>I love sports and hands-on classes. Usually, I tend to excell in my classes and help others during their problems.<br><br>I have picked up quite a few skills during self teaching myself and aim to improve these skills everyday. One of the most frequently practiced is for sure football, but in my freetime I love to build things or explore subjects that I find facinating. I got into coding about four years ago and ever since then, I have improved this website. (I could not have done it without google and the help of other developers with their feedback).<br><br>More information about me is listed below<br><br><span class="fas fa-chevron-right"></span><strong> Full Name: </strong> Brody Newell<br><br><span class="fas fa-chevron-right"></span><strong> Date of Birth: </strong>[HIDDEN]<br><br><span class="fas fa-chevron-right"></span><strong> Email: </strong>realbrodynewell@gmail.com (Secondary Email)<br><br><span class="fas fa-chevron-right"></span><strong> Languages Known: </strong>English, (Learning Spanish)<br><br><br></p>
                     <h3>Sports</h3>
                     <p><br><span class="fas fa-chevron-right"></span><strong> Number: </strong>#78<br><br><span class="fas fa-chevron-right"></span><strong> Main Position: </strong>Longsnapper<br><br><span class="fas fa-chevron-right"></span><strong> Height: </strong>5'6"<br><br><span class="fas fa-chevron-right"></span><strong> Weight: </strong>138.6 lbs.</p>
                     <a href="#projects">Projects</a>
@@ -478,7 +478,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email:</div>
-                                <div class="sub-title">brodynewell8@gmail.com</div>
+                                <div class="sub-title">realbrodynewell@gmail.com</div>
                             </div>
                         </div>
                     </div>
