--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#resources" class="menu-btn">Resouces</a></li>
+                <li><a href="#resources" class="menu-btn">Resources</a></li>
                 <li><a href="#projects" class="menu-btn">Projects</a></li>
                 <li><a href="#games" class="menu-btn">Games</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
