--- a/success.html
+++ b/success.html
@@ -43,7 +43,7 @@
             <ul class="menu">
                 <li><a href="https://brodynewell.com/" class="menu-btn">Home</a></li>
                 <li><a href="https://brodynewell.com/#about" class="menu-btn">About</a></li>
-                <li><a href="https://brodynewell.com/#resources" class="menu-btn">Resouces</a></li>
+                <li><a href="https://brodynewell.com/#resources" class="menu-btn">Resources</a></li>
                 <li><a href="https://brodynewell.com/#projects" class="menu-btn">Projects</a></li>
                 <li><a href="https://brodynewell.com/#games" class="menu-btn">Games</a></li>
                 <li><a href="https://brodynewell.com/#contact" class="menu-btn">Contact</a></li>
