added changes to the front page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="information-content">
                 <div class="column left">
                 </div>
-                  <p>Why the new look? Well if you read the message on the last website's homepage, I changed the look because I felt that the last one was a little over the top in look and was a bit janky. This simplified and modern beautiful look with animations allows much more growing potential for the site and other features moving forward.<br><i>If you would like to assist in the development process, you can kindly donate to me by the button down below. No need to worry though, just by being on this site allows me to morally continue forward with the development process, knowing people still come to this site and use it as a resource or place to hang out is really all I need.</i> Stay tuned for more to come!<br><br></p>
+                  <p><strong>Recent Changes</strong><br>- Added the Tenframe website. View it at https://tenframegames.com or https://sites.google.com/view/tenframe as either one works.<br><br></p>
                     <div class="column right">
                     <div class="text"><strong>What pages are here?</strong></div> <div class="blue-text"><span class="typing-pages"></span></div>
                     <p><br><br>I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about page. If not, then check it out anyways because I'm pretty cool.<br><br>If you want to find out what changes I have made recently, view the changes link that you can find down below in pages.</p>
