updated changes and added the vocabulary list 6

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="information-content">
                 <div class="column left">
                 </div>
-                  <p><strong>Recent Changes</strong><br>- Added the Tenframe website. View it at https://tenframegames.com or https://sites.google.com/view/tenframe as either one works.<br><br></p>
+                  <p><strong>Recent Changes</strong><br>- Added the Tenframe website to projects. View it at <i>https://tenframegames.com</i> or <i>https://sites.google.com/view/tenframe</i> as either one works.<br>- Added <i>Vocabulary List 6</i><br><br></p>
                     <div class="column right">
                     <div class="text"><strong>What pages are here?</strong></div> <div class="blue-text"><span class="typing-pages"></span></div>
                     <p><br><br>I created this website to showcase what I have done and am working on currently. You may also find many resources to help out in classes. Feeling bored? I have tons of games to choose from.<br><br>If you are interested in who I am, feel free to check out my about page. If not, then check it out anyways because I'm pretty cool.<br><br>If you want to find out what changes I have made recently, view the changes link that you can find down below in pages.</p>
@@ -189,6 +189,13 @@
         <div class="max-width">
             <h2 class="title">English Resources</h2>
             <div class="carousel owl-carousel">
+              <div class="card">
+                    <a href="https://quizlet.com/_aj5ye0?x=1qqt&i=2852uv" class="box" target="_blank">
+                        <img src="assets/img/pages/quizlet.png" alt="">
+                        <div class="text">Vocabulary List 6</div>
+                        <p>English 1 Honors - Vocabulary list to help with studies. 1st Semester.</p>
+                    </a>
+                </div>
                 <div class="card">
                     <a href="https://quizlet.com/_ag71hh?x=1qqt&i=2852uv" class="box" target="_blank">
                         <img src="assets/img/pages/quizlet.png" alt="">
@@ -304,6 +311,13 @@
         <div class="max-width">
             <h2 class="title">My Projects</h2>
             <div class="carousel owl-carousel">
+              <div class="card">
+                    <a href="https://www.tenframegames.com" class="box" target="_blank">
+                        <img src="assets/img/games/golf.png" alt="">
+                        <div class="text">Tenframe Games</div>
+                        <p>Me and my friends "business" that consists of an experienced game developer and many other assets to create a better gaming experience, and to document our successes and experiences trying out other games, or our own. <i>If this link is blocked, use <i><a href="https://sites.google.com/view/tenframe"  target="_blank"><strong> this one</strong></a></p>
+                    </a>
+                </div>
                 <div class="card">
                     <a href="https://brodynewell.com/games/golf/play" class="box" target="_blank">
                         <img src="assets/img/games/golf.png" alt="">
