changed a couple of tenframe links and images

--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@
             <div class="carousel owl-carousel">
               <div class="card">
                     <a href="https://www.tenframegames.com" class="box" target="_blank">
-                        <img src="assets/img/games/golf.png" alt="">
+                        <img src="assets/img/tenframeart.png" alt="">
                         <div class="text">Tenframe Games</div>
-                        <p>Me and my friends "business" that consists of an experienced game developer and many other assets to create a better gaming experience, and to document our successes and experiences trying out other games, or our own. <i>If this link is blocked, use <i><a href="https://sites.google.com/view/tenframe"  target="_blank"><strong> this one</strong></a></p>
+                        <p>Me and my friends "business" that consists of an experienced game developer and many other assets to create a better gaming experience, and to document our successes and experiences trying out other games, or our own.</p>
                     </a>
                 </div>
                 <div class="card">
